fix: restore sale registration
